# arfni_pjt

./: .gitignore  LICENSE  README.md  SYSTEM_ARCHITECTURE.md  WORK_SUMMARY.md  package-lock.json  package.json  test_add_dummy_server.ps1
.claude/: settings.local.json
BE/: .gitignore  Go 컨벤션.md  PROJECT_CONTEXT.md
BE/arfni/: .gitignore  MIGRATION.md  Makefile  README.md  build.bat  build.sh  go.mod  go.sum
BE/arfni/cmd/arfni/: main.go
BE/arfni/cmd/arfni-go/: main.go
BE/arfni/cmd/ic/: main.go
BE/arfni/examples/basic/: stack.yaml
BE/arfni/examples/ec2-deployment/: stack.yaml
BE/arfni/examples/multi-service/: stack.yaml
BE/arfni/internal/drivers/: driver.go
BE/arfni/internal/events/: stream.go  types.go  writer.go
BE/arfni/internal/sys/: exec.go
BE/arfni/internal/workflow/: dockerfile.go  generate.go  runner.go
BE/arfni/pkg/stack/: monitoring.go  stack.go
BE/arfni/pkg/stackschema/: schema.go  validation.go
Docs/: Alien-kh.md  Aristia0930.md  Command_List.md  REFACTORING_SUMMARY.md  alsdal.md  parkdu7.md  syeony.md  기능_명세서.csv
TEST/: docker-compose.yaml
TEST/ic-skeleton-fixed/: README.md  go.mod  ic
TEST/ic-skeleton-fixed/cmd/ic/: main.go
TEST/ic-skeleton-fixed/internal/generator/: compose.go
TEST/my-app/: README.md  stack-ec2.yaml  stack.yaml
TEST/my-app/apps/fastapi/: Dockerfile
arfni-gui/: .gitignore  package-lock.json  package.json  tsconfig.json  vite.config.ts
arfni-gui/src/: App.tsx  index.css
arfni-gui/src-tauri/: Cargo.toml  tauri.conf.json
arfni-gui/src-tauri/capabilities/: default.json
arfni-gui/src-tauri/migrations/: 001_initial.sql  002_add_no_monitoring.sql  003_move_mode_workdir_to_projects.sql
arfni-gui/src-tauri/sd/sdf/: stack.yaml
arfni-gui/src-tauri/src/: main.rs  test.rs
arfni-gui/src-tauri/src/commands/: deployment.rs  file_watcher.rs  health.rs  mod.rs  plugin.rs  plugin_check.rs  project.rs  ssh.rs  ssh_it.rs
arfni-gui/src-tauri/src/db/: mod.rs
arfni-gui/src-tauri/src/features/: health_check.rs  mod.rs  ssh_exec.rs  ssh_rt.rs
arfni-gui/src/app/: index.ts  index.tsx  store.ts
monitoring/: docker-compose.yml  prometheus.yml
(+102 files in other folders)
